updated form style classes

--- a/client/src/Components/Database/Base/style.css
+++ b/client/src/Components/Database/Base/style.css
@@ -1,7 +1,7 @@
-.container-base {
+/* .container-base {
     display: flex;
     padding: 6px;
     margin: 0px auto;
     background-color: transparent;
     width: 75%;
-}
+} */
