--- a/client/src/Components/Form/style.css
+++ b/client/src/Components/Form/style.css
@@ -180,7 +180,7 @@
     cursor: pointer;
 }
 
-.palette .components-header .heading {
+.palette .components-header .formheading {
     font-size: 12px;
     width: 100%;
     padding: 2px 0px;
