--- a/client/src/Components/Neo4j/Left/index.css
+++ b/client/src/Components/Neo4j/Left/index.css
@@ -4,8 +4,10 @@ text-align:  center;
 
 }
 .left-icons{
-    color: #027ef8;
+color: #027ef8;
  padding-right: 10px;
+ font-size: 20px;
+ display: inline;
  justify-content: space-between !important;
     
 }
