--- a/client/src/Components/Neo4j/Left/index.css
+++ b/client/src/Components/Neo4j/Left/index.css
@@ -5,7 +5,7 @@ text-align:  center;
 }
 .left-icons{
     color: #027ef8;
- padding-right: 10px;
+ padding-right: 10px !important;
  justify-content: space-between !important;
     
 }
