--- a/client/src/Components/LoginSignup/style.css
+++ b/client/src/Components/LoginSignup/style.css
@@ -6,7 +6,7 @@ input {
   font-family: "Poppins", sans-serif;
 }
 
-.container {
+.login_container {
   position: relative;
   width: 100%;
   background-color: #fff;
@@ -155,7 +155,7 @@ form.sign-in-form {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.container:before {
+.login_container:before {
   content: "";
   position: absolute;
   height: 2000px;
@@ -228,45 +228,45 @@ form.sign-in-form {
 
 /* ANIMATION */
 
-.container.sign-up-mode:before {
+.login_container.sign-up-mode:before {
   transform: translate(100%, -50%);
   right: 52%;
 }
 
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
+.login_container.sign-up-mode .left-panel .image,
+.login_container.sign-up-mode .left-panel .content {
   transform: translateX(-800px);
 }
 
-.container.sign-up-mode .signin-signup {
+.login_container.sign-up-mode .signin-signup {
   left: 25%;
 }
 
-.container.sign-up-mode form.sign-up-form {
+.login_container.sign-up-mode form.sign-up-form {
   opacity: 1;
   z-index: 2;
 }
 
-.container.sign-up-mode form.sign-in-form {
+.login_container.sign-up-mode form.sign-in-form {
   opacity: 0;
   z-index: 1;
 }
 
-.container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content {
+.login_container.sign-up-mode .right-panel .image,
+.login_container.sign-up-mode .right-panel .content {
   transform: translateX(0%);
 }
 
-.container.sign-up-mode .left-panel {
+.login_container.sign-up-mode .left-panel {
   pointer-events: none;
 }
 
-.container.sign-up-mode .right-panel {
+.login_container.sign-up-mode .right-panel {
   pointer-events: all;
 }
 
 @media (max-width: 870px) {
-  .container {
+  .login_container {
     min-height: 800px;
     height: 100vh;
   }
@@ -278,7 +278,7 @@ form.sign-in-form {
   }
 
   .signin-signup,
-  .container.sign-up-mode .signin-signup {
+  .login_container.sign-up-mode .signin-signup {
     left: 50%;
   }
 
@@ -330,7 +330,7 @@ form.sign-in-form {
     font-size: 0.7rem;
   }
 
-  .container:before {
+  .login_container:before {
     width: 1500px;
     height: 1500px;
     transform: translateX(-50%);
@@ -341,19 +341,19 @@ form.sign-in-form {
     transition: 2s ease-in-out;
   }
 
-  .container.sign-up-mode:before {
+  .login_container.sign-up-mode:before {
     transform: translate(-50%, 100%);
     bottom: 32%;
     right: initial;
   }
 
-  .container.sign-up-mode .left-panel .image,
-  .container.sign-up-mode .left-panel .content {
+  .login_container.sign-up-mode .left-panel .image,
+  .login_container.sign-up-mode .left-panel .content {
     transform: translateY(-300px);
   }
 
-  .container.sign-up-mode .right-panel .image,
-  .container.sign-up-mode .right-panel .content {
+  .login_container.sign-up-mode .right-panel .image,
+  .login_container.sign-up-mode .right-panel .content {
     transform: translateY(0px);
   }
 
@@ -362,7 +362,7 @@ form.sign-in-form {
     transform: translateY(300px);
   }
 
-  .container.sign-up-mode .signin-signup {
+  .login_container.sign-up-mode .signin-signup {
     top: 5%;
     transform: translate(-50%, 0);
   }
@@ -379,16 +379,16 @@ form.sign-in-form {
   .panel .content {
     padding: 0.5rem 1rem;
   }
-  .container {
+  .login_container {
     padding: 1.5rem;
   }
 
-  .container:before {
+  .login_container:before {
     bottom: 72%;
     left: 50%;
   }
 
-  .container.sign-up-mode:before {
+  .login_container.sign-up-mode:before {
     bottom: 28%;
     left: 50%;
   }
